--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
                     <input id="email" name="email" type="email" class="w-full border-2 border-gray-200 p-2 rounded-lg" placeholder="Email Address"required>
                 </div>
                 <div class="mb-5">
-                    <label for="password" class="block mb-1">Password</label>
+                    <label for="password" class="block mb-1">password</label>
                     <input id="password" name="password" type="password" class="w-full border-2 border-gray-200 p-2 rounded-lg" placeholder="Password"required pattern = "(?=.*\d)(?=.* 
                     [a-z])(?=.*?[0-9])(?=.*?[~`!@#$%\^&*()\-_=+[\]{};:\x27.,\x22\\|/?>]).{4,}">
                 </div>
